# ectype

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: camera.h  gl_shaders.h  intersections.h  main.cpp  main_program.cpp  main_program.h  present_texture.cpp  present_texture.h  scene.h  screen_buffer.h  threading.h  utils.h
src/window_render/: gl_shaders.h  present_texture.cpp  present_texture.h
